test/2-errors/uns-incomplete.test
{
  'code' : 1,
  'err' : '''\
test/2-errors/uns-incomplete.ploy:1:3: parse error: incomplete number literal
    0x
      ^
'''
}
